--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
+@keyframes FadeInOut {
+    0%,
+    100% {
+        opacity: 1;
+    }
+    20%,
+    70% {
+        opacity: 0.2;
+    }
+    25%,
+    65% {
+        opacity: 0;
+    }
+}
+
+@keyframes Reversed-FadeInOut {
+    0%,
+    100% {
+        opacity: 0;
+    }
+    20%,
+    75% {
+        opacity: 0.3;
+    }
+    35%,
+    65% {
+        opacity: 1;
+    }
+}
+
+@keyframes Pulse {
+    0%,
+    50%,
+    100% {
+        opacity: 1;
+    }
+    25%,
+    75% {
+        opacity: 0;
+    }
+}
+
 @keyframes Gradient {
     0% {
         background-position: 0% 50%;
@@ -20,38 +62,28 @@
 }
 
 @keyframes Jump {
-    0% {
+    0%,
+    100% {
         transform: translateY(0);
     }
-    10% {
+    10%,
+    90% {
         transform: translateY(-30px);
     }
-    20% {
+    20%,
+    80% {
         transform: translateY(-60px);
     }
-    30% {
+    30%,
+    70% {
         transform: translateY(-90px);
     }
-    40% {
+    40%,
+    60% {
         transform: translateY(-120px);
     }
     50% {
         transform: translateY(-150px);
-    }
-    60% {
-        transform: translateY(-120px);
-    }
-    70% {
-        transform: translateY(-90px);
-    }
-    80% {
-        transform: translateY(-60px);
-    }
-    90% {
-        transform: translateY(-30px);
-    }
-    100% {
-        transform: translateY(0);
     }
 }
 
@@ -71,7 +103,7 @@
 body {
     margin: 0;
     font-family: 'Lato', sans-serif;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .start-screen,
@@ -79,6 +111,10 @@ body {
 .game-over {
     height: 100vh;
     width: 100vw;
+    transition: all 750ms ease-out;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .start-screen,
@@ -87,6 +123,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.game,
+.game-over {
+    transform: translateY(100%);
 }
 
 h1 {
@@ -135,11 +176,27 @@ button:focus {
     height: 100vh;
 }
 
+.moon-img,
 .sun-img {
     position: absolute;
-    top: 105vh;
-    left: 65vw;
+    top: 5vh;
     width: 20vh;
+}
+
+.moon-img {
+    right: 15vw;
+    animation-name: Reversed-FadeInOut;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-duration: 15s;
+}
+
+.sun-img {
+    left: 20vw;
+    animation-name: FadeInOut;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-duration: 15s;
 }
 
 span {
@@ -148,24 +205,32 @@ span {
     letter-spacing: 1.5px;
 }
 
-.result {
+.lives,
+.result,
+i {
     position: absolute;
     text-align: right;
-    top: 102vh;
-    left: 88vw;
     font-size: 19px;
     font-weight: bold;
+}
+
+.result {
+    top: 2vh;
+    right: 2vw;
     letter-spacing: 2px;
 }
 
 .lives {
-    position: absolute;
-    text-align: right;
-    top: 102vh;
-    left: 83vw;
-    font-size: 19px;
-    font-weight: bold;
+    top: 2vh;
+    right: 13vw;
     letter-spacing: 2px;
+    margin-left: 10px;
+}
+
+i {
+    color: white;
+    top: 2.3vh;
+    right: 14.5vw;
 }
 
 .ostrich-game-over {
@@ -175,19 +240,28 @@ span {
 
 .ostrich-game-start {
     height: 20vh;
+    height: 120px;
     align-self: center;
 }
 
 .ostrich-standing,
 .ostrich-moving {
     position: absolute;
-    top: 167vh;
+    bottom: 14vh;
     left: 4vw;
-    width: 15vh;
+    width: 96px;
 }
 
 .jump {
-    animation: Jump 1.1s ease 0s 1 normal;
+    animation: Jump 1.25s ease 0s 1 normal;
+}
+
+.lose-life {
+    animation: Pulse 0.5s ease 0s 1 normal;
+}
+
+.jump.lose-life {
+    animation: Jump 1.25s ease 0s 1 normal, Pulse 0.5s ease 0s 1 normal;
 }
 
 .hidden {
@@ -199,28 +273,38 @@ span {
     margin-bottom: 20px;
 }
 
-.egg-small {
-    display: none;
+.egg-small,
+.egg-big {
+    bottom: 14vh;
     position: absolute;
-    top: 179vh;
-    left: 101vw;
+    right: -1vw;
+    border: 5px solid #000;
+    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+    animation: Move 8.5s infinite linear;
+    display: none;
+}
+
+.egg-small {
     width: 32px;
     height: 45px;
     background-color: rgb(248, 247, 180);
-    border: 5px solid #000;
-    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-    animation: Move 8.5s infinite linear;
 }
 
 .egg-big {
-    display: none;
-    position: absolute;
-    top: 177vh;
-    left: 101vw;
     width: 42px;
     height: 59px;
     background-color: rgb(247, 245, 138);
-    border: 5px solid #000;
-    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-    animation: Move 8.5s infinite linear;
+}
+
+.grass {
+    position: absolute;
+    bottom: 14vh;
+    right: -1vw;
+    display: none;
+    animation: Move 6.5s infinite linear;
+    height: 37px;
+}
+
+.button-info {
+    margin-top: 15px;
 }
