--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ i {
 .ostrich-down {
     position: absolute;
     bottom: 14vh;
-    left: 4vw;
+    left: 40vw;
     height: 120px;
 }
 
@@ -276,9 +276,10 @@ i {
 .grass-double {
     position: absolute;
     bottom: 14vh;
-    right: -1vw;
+    right: 10vw;
     display: none;
-    animation: Move 7.3s infinite linear;
+    animation: none;
+	
 }
 
 .grass-small {
