--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ button:focus {
 }
 
 .city-img {
-    background: url(./img/background.png);
+    background: url(./img/desert_bg.jpg);
     background-size: cover;
     height: 100vh;
 }
@@ -295,4 +295,17 @@ i {
 
 .grass-double {
     height: 45px;
+}
+
+.tree {
+    animation: disappear 10s forwards;
+}
+
+@keyframes disappear {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
